# discrete-modulus

./: .gitignore  Dual_Families.html  Exact_Spanning_Tree_Modulus.html  Intro_to_Modulus.html  README.md  References.html  The_Basic_Algorithm.html  index.html  search.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: book.yml  cpp-test.yml  lean-test.yml  lint.yml  test.yml
book/: .gitignore  Dual_Families.ipynb  Dual_Families.qmd  Exact_Spanning_Tree_Modulus.qmd  Intro_to_Modulus.ipynb  Intro_to_Modulus.qmd  Introduction.md  References.bib  The_Basic_Algorithm.ipynb  The_Basic_Algorithm.qmd  _config.yml  _environment  _quarto.yml  chicago-author-date-arxiv.csl  custom.css  index.qmd
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/docs/: Doxyfile
cpp/examples/: branch_test.certificate.json  branch_test.edges  branch_test.eta  branch_test.trace.json  celegans.edges  house.certificate.json  house.edges  house.eta  house.trace.json  nested.certificate.json  nested.edges  nested.trace.json  random.edges
cpp/include/discrete_modulus/: cunningham.hpp  graphs.hpp  solver_trace.hpp
cpp/src/: spt_mod.cpp
cpp/test/: CMakeLists.txt  test_cunningham.cpp  test_graphs.cpp  test_solver_trace.cpp
docs/certification/: README.md  certificate_schema.json  pipeline.md  schema.md  theorem.md  trust.md  walkthrough.md
julia/: README.md
lean/: DiscreteModulusCert.lean  Main.lean  lake-manifest.json  lakefile.toml  setup.sh
lean/DiscreteModulusCert/: Admissibility.lean  Basic.lean  CertChecker.lean  CertCheckerTest.lean  EndToEndTest.lean  Family.lean  ForestDecide.lean  ForestDecideTest.lean  Glue.lean  HouseCert.lean  IsBaseCheck.lean  Kruskal.lean  KruskalTest.lean  Optimality.lean  Soundness.lean
python/: pyproject.toml
python/docs/: .gitignore  _quarto.yml  index.qmd  mkdocs.yml
python/docs/pages/: index.md
python/docs/pages/reference/: algorithms.md  demo.md  index.md  protocols.md
python/docs/pages/reference/families/: family_operators.md  networkx_families.md
python/src/discrete_modulus/: __init__.py  algorithms.py  basic_algorithm.py  certificate_builder.py  core_deflation.py  demo.py  demo_graphs.py  min_norm_point.py  pmf_construction.py  protocols.py  spanning_tree_modulus.py  tree_packing.py
python/src/discrete_modulus/families/: __init__.py  family_operators.py  networkx_families.py
python/tests/: helpers.py  test_algorithms.py  test_certificate_builder.py  test_core_deflation.py  test_demo.py  test_family_operators.py  test_min_norm_point.py  test_networkx_families.py  test_pmf_construction.py  test_protocols.py  test_spanning_tree_modulus.py
reference/cpp/: README_8md.html  annotated.html  classes.html  cunningham_8hpp.html  cunningham_8hpp__incl.map  cunningham_8hpp__incl.md5  cunningham_8hpp_source.html  dir_c7700f775feef876a55f8179333fce8e.html  dir_c7700f775feef876a55f8179333fce8e_dep.map  dir_c7700f775feef876a55f8179333fce8e_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  graphs_8hpp.html  graphs_8hpp__dep__incl.map  graphs_8hpp__dep__incl.md5  graphs_8hpp__incl.map  graphs_8hpp__incl.md5  graphs_8hpp_source.html  index.html  namespacediscrete__modulus.html  namespacediscrete__modulus_1_1detail.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  solver__trace_8hpp.html  (+13 more)
scratch/: Certification_Plan.md  Certification_Thoughts.md  HANDOFF.md  ReadingPlan.md  certificate_schema.json  column_gen.py  column_gen_exact.py  column_gen_scaled.py  core_deflation.py  core_deflation_maxflow.py  deflation_gluing.py  deflation_gluing_factored.py  matroid_union_packing.py  nested_trace_validation.py  residual_performance_mystery.md  wolfe_min_norm.py  wolfe_min_norm_exact.py
(+74 files in other folders)
