[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discrete-modulus"
version = "0.1.0"
description = "Reference implementations of discrete modulus algorithms."
readme = "../README.md"
license = { file = "../LICENSE" }
authors = [
    { name = "Nathan Albin" },
    { name = "Pietro Poggi-Corradini" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "cvxpy",
    "networkx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/discrete_modulus"]
