[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discrete-modulus"
version = "0.1.0"
description = "Reference implementations of discrete modulus algorithms."
readme = "../README.md"
license = { file = "../LICENSE" }
authors = [
    { name = "Nathan Albin" },
    { name = "Pietro Poggi-Corradini" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "cvxpy",
    "networkx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/discrete_modulus"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "ruff>=0.6",
    "types-networkx",
    "scipy-stubs",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
book = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "pycddlib>=2.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# Checked against 3.12 (matching the numpy 2.5 stubs' syntax requirements)
# even though the package supports Python >=3.11 at runtime.
python_version = "3.12"
packages = ["discrete_modulus"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["cvxpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["discrete_modulus"]
